// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`+ 버튼 클릭시 1 증가한다 1`] = `
"
      <button data-testid=\\"btn-dec\\" type=\\"button\\" class=\\"btn btn-secondary btn-dec\\">-</button>
      <span data-testid=\\"value\\" class=\\"value\\">11</span>
      <button data-testid=\\"btn-inc\\" type=\\"button\\" class=\\"btn btn-primary btn-inc\\">+</button>
    "
`;

exports[`- 버튼 클릭시 1 감소한다 1`] = `
"
      <button data-testid=\\"btn-dec\\" type=\\"button\\" class=\\"btn btn-secondary btn-dec\\">-</button>
      <span data-testid=\\"value\\" class=\\"value\\">9</span>
      <button data-testid=\\"btn-inc\\" type=\\"button\\" class=\\"btn btn-primary btn-inc\\">+</button>
    "
`;

exports[`Max값인 경우 + 버튼이 disabled 상태가 된다 1`] = `
"
      <button data-testid=\\"btn-dec\\" type=\\"button\\" class=\\"btn btn-secondary btn-dec\\">-</button>
      <span data-testid=\\"value\\" class=\\"value\\">12</span>
      <button data-testid=\\"btn-inc\\" type=\\"button\\" disabled=\\"\\" class=\\"btn btn-primary btn-inc\\">+</button>
    "
`;

exports[`Min값인 경우 - 버튼이 disabled 상태가 된다 1`] = `
"
      <button data-testid=\\"btn-dec\\" type=\\"button\\" disabled=\\"\\" class=\\"btn btn-secondary btn-dec\\">-</button>
      <span data-testid=\\"value\\" class=\\"value\\">8</span>
      <button data-testid=\\"btn-inc\\" type=\\"button\\" class=\\"btn btn-primary btn-inc\\">+</button>
    "
`;

exports[`생성시 버튼과 초기값을 렌더링한다 1`] = `
"
      <button data-testid=\\"btn-dec\\" type=\\"button\\" class=\\"btn btn-secondary btn-dec\\">-</button>
      <span data-testid=\\"value\\" class=\\"value\\">10</span>
      <button data-testid=\\"btn-inc\\" type=\\"button\\" class=\\"btn btn-primary btn-inc\\">+</button>
    "
`;
